...
  "meetup": "Meetup",
  "send": "Send",
  "message": "Message",
  "chat": "Chat",
  "confirm": "Confirm",
  "language": "Language",
  "retry": "Retry",
  "listSeparator": ", ",
  "notFound": "Not found",
  "required": "is required",
  "comingSoon": "Coming soon",
  "goBack": "Go back",
  "undo": "Undo",
...
